--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,7 @@ body {
 	font-size:26px;
 	line-height: 26px;
 	font-family: 'Inconsolata', monospace;
-	background-image: url("images/bg2.jpg");
+	background-image: url("bg2.jpg");
 	height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -55,7 +55,7 @@ header > section {
 	width:100%;
 	height:250px;
 	background-color: wheat;
-	background-image: url(../images/bg4.jpg);
+	background-image: url(bg4.jpg);
 	background-position:center;
 }
 
