--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@ body {
 	font-size:18px;
 	line-height: 26px;
 	font-family: 'Inconsolata', monospace;
-	background-image: url("images/bg8.jpg");
+	background-image: url("bg8.jpg");
 	height: 100%;
 	background-position: center;
   background-repeat: no-repeat;
@@ -32,7 +32,7 @@ header > section {
 	width:100%;
 	height:280px;
 	background-color: wheat;
-	background-image: url(../images/bg4.jpg);
+	background-image: url("bg4.jpg");
 	background-position:center;
 }
 
