--- a/style1.css
+++ b/style1.css
@@ -55,7 +55,7 @@ header > section {
 	width:100%;
 	height:250px;
 	background-color: wheat;
-	background-image: url(bg4.jpg);
+	background-image: url("bg4.jpg");
 	background-position:center;
 }
 
