--- a/style4.css
+++ b/style4.css
@@ -3,7 +3,7 @@ body {
 	padding: 0;
 	font-size:18px;
 	font-family: 'Inconsolata', monospace;
-	background-image: url("images/bg8.jpg");
+	background-image: url("bg8.jpg");
 	height: 100%;
 	background-position: center;
   background-repeat: no-repeat;
@@ -46,7 +46,7 @@ header > section {
 	width:100%;
 	height:280px;
 	background-color: wheat;
-	background-image: url(../images/bg4.jpg);
+	background-image: url("bg4.jpg");
 	background-position:center;
 }
 
